[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
name = "antikoerper"
version = "0.2.0"
license = "GPL-3.0"
homepage = "https://github.com/anti-koerper/antikoerper"
keywords = ["monitoring", "lightweight", "fast"]
description = "A lightweight and simple to use local monitoring application"

[dependencies]
clap = "2.1.2"
env_logger = "0.3.2"
log = "0.3.5"
time = "0.1.34"
xdg = "2.0.0"
serde        = "1"
serde_derive = "1"
toml         = "0.4"
itertools    = "0.7"
regex        = "1"
