[package]
authors = ["Marcel Müller <neikos@neikos.email>"]
name = "antikoerper"
version = "0.2.0"
license = "GPL-3.0"
edition = "2018"
homepage = "https://github.com/anti-koerper/antikoerper"
keywords = ["monitoring", "lightweight", "fast"]
description = "A lightweight and simple to use local monitoring application"

[dependencies]
clap = "2"
env_logger = "0.8"
log = "0.4"
time = "0.2"
xdg = "2"
serde        = "1"
serde_derive = "1"
serde_regex  = "1"
toml         = "0.5"
itertools    = "0.10"
regex        = "1"
futures      = "0.3"
influxdb     = "0.3"

[dependencies.tokio]
version = "1"
features = [ "full" ]
